@@ -42,6 +42,10 @@
                     <td>{$item.comment}</td>
                     {if !$disable_invoices}
                     <td>
+						{foreach $item.customlinks as $link}
+						<a {if isset($link.url)}href="{$link.url}"{/if} target="_blank" {if isset($link.onclick)}onclick="{$link.onclick}"{/if}>{if isset($link.icon)}{img src="$link.icon" alt="[ $link.label ]" text=$link.tip}>{else}{$link.label}{/if}</a>
+						{if isset($link.extra)}{$link.extra}{/if}
+						{/foreach}
                         {if $item.doctype==1 || $item.doctype==3}
                         <a href="?m=finances&amp;f=invoice&amp;id={$item.docid}" target="_blank">Wydrukuj</a> <input type="checkbox" name="inv[{$item.docid}]" value="1" />
                         {else}
