@@ -23,6 +23,10 @@
 		<td width="95%">{$item.comment}</td>
 		{if !$disable_invoices}
 		<td width="1%" class="nobr">
+			{foreach $item.customlinks as $link}
+			<a {if isset($link.url)}href="{$link.url}"{/if} target="_blank" {if isset($link.onclick)}onclick="{$link.onclick}"{/if}>{if isset($link.icon)}{img src="$link.icon" alt="[ $link.label ]" text=$link.tip}>{else}{$link.label}{/if}</a>
+			{if isset($link.extra)}{$link.extra}{/if}
+			{/foreach}
 			{if $item.doctype == 1 || $item.doctype == 3}
 			<a href="?m=finances&amp;f=invoice&amp;id={$item.docid}" target="_blank">{img src="print.gif" alt="[ Print ]" text=$item.number}</a><input style="vertical-align: middle" type="checkbox" name="inv[{$item.docid}]" value="1" />
 			{else}
